--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@mui/material": "^7.3.6",
     "@tailwindcss/vite": "^4.1.18",
     "ami-authenticated": "^1.0.5",
+    "date-fns": "^4.1.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
-    "tailwindcss": "^4.1.18",
-    "react-big-calendar": "^1.19.4",
-    "date-fns": "^4.1.0"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
