--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@mui/x-date-pickers": "^8.23.0",
     "@tailwindcss/vite": "^4.1.18",
     "ami-authenticated": "^1.0.5",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
     "react-big-calendar": "^1.19.4",
+    "react-datepicker": "^9.1.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
     "tailwindcss": "^4.1.18"
