--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
     "react-toastify": "^11.0.5",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
