--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ami-authenticated": "^1.0.5",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
+    "highcharts-react-official": "^3.2.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.561.0",
     "react": "^19.2.0",
