--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0",
     "react-toastify": "^11.0.5",
+    "react-window": "^1.8.11",
     "react-youtube": "^10.1.0",
     "tailwindcss": "^4.1.18"
   },
